# report-bug

./: .gitignore  pyproject.toml
bug_report/: api.py  app.py  tasks.py
bug_report/static/: index.js  styles.css
bug_report/templates/: index.html
